@@ -5,14 +5,16 @@ AUX ies4linux-2.0.5-Adapt_paths.patch 3376 RMD160 619a6e452eb4ab77a2c98270242d36
 AUX ies4linux-2.5_beta6-Installation_directory_discovery.patch 522 RMD160 a27f149178098242aaaadc12c4ac507219b7bcaf SHA1 a7c5d28b9effbf6f61980d48700a792a49b0b126 SHA256 0d2d7e40f6f635c0d355fa3dd30e765bb535e060394b3c86336d78be7143fc9d
 DIST ies4linux-2.0.5.tar.gz 340006 RMD160 17abed0eae3425af24acbb4dcffbc648de77b05b SHA1 226b060025bb359197ce4652c44d18e7e48dbedb SHA256 47432d739c73c495bf67104a5808bfeb37589231af62763737c0ce632c717c5f
 DIST ies4linux-2.5beta6.tar.gz 324934 RMD160 6f487255687671625c6cbefdf62ea79caf391000 SHA1 d010e30ab9e2dd89afa43408d732c8ab4373d306 SHA256 0fc553e5e98bd95ce211903e526737a1101cb31194224d7ecef4982f2e0e863f
+DIST ies4linux-2.99.0.1.tar.gz 332341 RMD160 7dc2e866c9b344cdbecb26ef23a967dda5e8cfc3 SHA1 3dc29e69e45453b2a73380dbd6d0059f07502d9f SHA256 f12685793b8978b1cf418b823724382aaac238adbb6bb4721e6d001ab8afa88e
 EBUILD ies4linux-2.0.5.ebuild 2070 RMD160 2bcd85bc4ff825e8b5b7231381be2fade51d6d92 SHA1 835971fdccfa927e4e76401eb778f4e4459a3d73 SHA256 ba83638ed15013dbb74a6328d2c5c9158099c7727091b5668fb466a415bd38c6
-EBUILD ies4linux-2.5_beta6.ebuild 2859 RMD160 ecadf9566432d3d10f604dd3bb537004551f1814 SHA1 315f4b8f2e8d363e925c27286e2c995fc9213001 SHA256 f6623bc9fe99a7e1bb69a77d7236202c9784731cb994d1276b462b3b918286f8
-MISC ChangeLog 1288 RMD160 0eee0106a4856aba8f11e41ae6d1c90102586905 SHA1 b0ad97db3d1a13ccc0b79e72bfa2197bf68bb53e SHA256 9824dcc53c00b420324a4abb03ee922fc97cf48a2c6aa1cd1df03101a06436dd
+EBUILD ies4linux-2.5_beta6.ebuild 2859 RMD160 938c465105595c8f08beb92ae3408b9bb544e2e4 SHA1 8e178978ed06a16d7aa3f0bfdd415a2ab21d8d8b SHA256 fd4ad8e480babe5e47eafb9689036841f1207ffb123b9849c30c80cc10854637
+EBUILD ies4linux-2.99.0.1.ebuild 2792 RMD160 37beeb518bbbe8b2f7d2e00d5497569a70d6709a SHA1 dbebf39f296f658604e9dbacccf15df0c63fbbbe SHA256 65f10091496d3b647cbea45878521a5b4dd6124a574c27e57a258d39905437fe
+MISC ChangeLog 1452 RMD160 c3c906830106dca259b0f4aa38f3a11322bb3e1e SHA1 762a2f3029067f042f17135f3efc25e058caba2b SHA256 0a158c00ff9daacfb379d90beb575f804fac7acc5395d11d5880850ff153a339
 MISC metadata.xml 987 RMD160 049be596a99c4ce4874ecfd0de887acc947361ad SHA1 feb1b2614b9a4763cc3c0c9a7a748f22686ee59f SHA256 a3fd4581ad2e6b2f5bf1d3e2ea2eab34267f0016922715886a2f3bab834b28ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiwUxoACgkQkKaRLQcq0GLuZgCggvYa3oTYaDC3kgms5ieY36/R
-HTMAoI35X9OFfOM3bLFyd4r9XQ8ANXDk
-=vyyL
+iEYEARECAAYFAkjQMXAACgkQr2QksT29OyDrdACaApNYR33qGwtJdJWzakdij8qO
+czcAn1dCWYqP3QZ3OwyZDy7u/KchL0uP
+=1Lgz
 -----END PGP SIGNATURE-----
